<resources>
    <string name="app_name">佳妍</string>

    <string-array name="tab_title">
        <item>伴美</item>
        <item>话题</item>
        <item>我的</item>
    </string-array>

    <string-array name="tab_post">
        <item>话题</item>
        <item>日志</item>
    </string-array>

    <string name="topic">话题</string>
    <string name="diary">日记</string>

    <string name="gender">性别</string>
    <string name="gender_male">男</string>
    <string name="gender_female">女</string>

    <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese.</string>
    <string name="post_daily">分享日志</string>
    <string name="post_topic">发表话题</string>
    <string name="publish">发表</string>
    <string name="beauty_with">伴美</string>
    <string name="community">发现</string>
    <string name="activity">活动</string>
    <string name="userinfo">我</string>
    <string name="pedia">百科</string>

    <string name="thumbs_up_count">%s人赞过</string>
    <string name="comment_count">%s条评论</string>

    <string name="comment_hint">请留下你的评论</string>
    <string name="next">下一步</string>
    <string name="finish">完成</string>
    <string name="share">分享</string>
    <string name="post_share_text" formatted="false">Hello, 我看到有趣的内容想推荐给你，%s , %s</string>

    <string name="save">保存</string>
    <string name="project">项目</string>

    <string name="direct_login">直接登录</string>
    <string name="wechat_login">微信登录</string>
    <string name="qq_login">QQ登录</string>
    <string name="sina_login">新浪登录</string>
    <string name="category">分类</string>
    <string name="my_diary_share">分享我的的美丽天使日记</string>
    <string name="my_diary_mime">我的日记</string>
    <string name="create_new_diary">创建新日记</string>
    <string name="create_diary_book">创建日记本</string>
    <string name="update_diary">更新日记本</string>
    <string name="set_gender">性别</string>
    <string name="wechat">微信</string>
    <string name="QQ">QQ</string>
    <string name="weibo">微博</string>

    <!-- title -->
    <string name="title_publish_topic">话题内容</string>
    <string name="title_select_category">选择分类</string>
    <string name="title_my_diaries">选择日记本</string>
    <string name="title_publish_diary">发表日记</string>
    <string name="title_select_project">选择项目</string>
    <string name="title_surgery_info">手术信息</string>
    <string name="title_hospital_info">医院信息</string>
    <string name="title_doctor_info">医生信息</string>
    <string name="title_photo_browse">图片浏览</string>
    <string name="title_my_company">我的伴美</string>
    <string name="title_edit_gender">选择性别</string>
    <string name="title_personal_page">%s的主页</string>
    <string name="title_my_personal_page">我的主页</string>
    <string name="title_share_to">分享到</string>
    <string name="title_mine_page">我的主页</string>
    <string name="title_mine_notification">我的通知</string>
    <string name="title_mine_comment">我的评论</string>
    <string name="title_mine_company">我的伴美</string>
    <string name="title_mine_angel">美丽天使</string>
    <string name="title_event_detail">活动详情</string>
    <string name="title_mine_setting">设置</string>
    <string name="title_applyment_list">报名列表</string>

    <!-- hint -->
    <string name="hint_search_input">请输入%s</string>
    <string name="time">时间</string>
    <string name="doctor">医生</string>
    <string name="hospital">医院</string>
    <string name="satisfy_level">整体评价</string>
    <string name="level_1">一般</string>
    <string name="level_2">较好</string>
    <string name="level_3">很好</string>
    <string name="level_4">非常好</string>
    <string name="level_5">超好</string>
    <string name="price">价格</string>
    <string name="share_diary">分享日志</string>
    <string name="publish_topic">发表话题</string>


    <string name="hint_reply_to">回复: %s</string>
    <string name="select_publish">选择发布</string>
    <string name="other_login">其他方式登录</string>
    <string name="register">手机注册</string>
    <string name="hint_input_phone">手机号</string>
    <string name="hint_input_pass">密码</string>
    <string name="login">登录</string>
    <string name="hint_social_login_account">第三方登录帐号</string>
    <string name="txt_forget_pass">忘记密码？</string>
    <string name="send_verify_code">获取验证码</string>
    <string name="verify">完成验证</string>
    <string name="verify_phone">验证手机</string>
    <string name="female">女</string>
    <string name="male">男</string>
    <string name="hint_input_nickname">请输入呢称(2-20个字符)</string>
    <string name="hint_input_set_pass">设置新密码(6-20个字符)</string>
    <string name="hint_input_set_pass_again">请再次输入新密码</string>
    <string name="hint_input_cur_pass">请输入当前密码</string>
    <string name="confirm_reset">重置密码</string>
    <string name="hint_input_phone_code">请输入短信验证码</string>
    <string name="hint_waring_send_phone_code">请点击发送验证码</string>
    <string name="title_set_info">完善信息</string>
    <string name="waring_pass_is_not_same">再次输入的密码不一致</string>
    <string name="title_reset_pass">重新设置密码</string>
    <string name="title_update_pass">修改密码</string>
    <string name="msg_account_not_register">该帐号未注册，请验证手机进行注册</string>
    <string name="msg_sent_phone_code">已发送验证码!</string>
    <string name="msg_overdue_to_login">登录信息已经过期，请重新登录</string>
    <string name="msg_sign_up_success">报名成功，稍后由客服人员跟你确定信息</string>
    <string name="nickname">呢称</string>
    <string name="phone">手机</string>
    <string name="operation_time">手术时间</string>

    <string name="share_wechat">微信好友</string>
    <string name="share_wechat_circle">朋友圈</string>
    <string name="share_weibo">新浪微博</string>
    <string name="share_qzone">QQ空间</string>

    <string name="btn_cancel">取消</string>
    <string name="account_status_unbind">未绑定</string>
    <string name="account_status_bind">已绑定</string>

    <!--出错信息toast-->
    <string name="toast_error_wechat_not_install">未安装微信应用</string>

    <string name="description_company">信息确认无误并提交后，亲们将会在1~3个工作日内收到系统信息通知的审核结果，用户凭报名信息参加伴美活动。可在“我的”-“我的通知”当中查看通知信息喔。</string>
    <string name="description_angel">信息确认无误并提交后，亲们将会在1~3个工作日内收到系统信息通知。可在“我的”-“我的通知”当中查看通知信息喔。</string>
    <string name="btn_confirm_applyment">确认报名</string>
    <string name="take_camera">拍照</string>
    <string name="take_photo">手机相册</string>
    <string name="exit">退出</string>
    <string name="my_company">我的伴美</string>
    <string name="my_home_page">我的主页</string>
    <string name="header_image">头像</string>
    <string name="area">地区</string>
    <string name="birthday">生日</string>
    <string name="user_info">个人信息</string>
    <string name="event_recruit">招募中</string>
    <string name="event_finish">已结束</string>
    <string name="continue_apply_angel">继续申请美丽天使</string>
    <string name="become_angel">成为美丽天使</string>
    <string name="hint_please_choose">请选择</string>
    <string name="hint_please_choose_optional">请选择(选填)</string>
    <string name="change">更换</string>
    <string name="hint_input_null">输入信息不能为空！</string>
    <string name="hint_input_error">输入格式不正确！</string>
    <string name="edit">编辑</string>
    <string name="text_about_angel">美丽天使是sb美丽天使是sb美丽天使是sb美丽天使是sb美丽天使是sb，美丽天使是sb美丽天使是sb美丽天使是sb。</string>
    <string name="hint_input_hospital">请选择医院！</string>
    <string name="hint_input_project">请选择项目！</string>
    <string name="hint_input_time">请选择时间！</string>
    <string name="title_search_category">项目名称</string>
    <string name="hint_select_pic">请选择图片！</string>
    <string name="btn_publish_comment">发表评价</string>
    <string name="title_comment_company">评价伴美</string>
    <string name="about_us">关于我们</string>
    <string name="all_right_reserved">© JIAYAN.COM ALL RIGHT RESERVED</string>
    <string name="hint_feedback">你的宝贵意见是我们前进的动力</string>
    <string name="hint_feedback_contact">请留下你的手机号/QQ号(选填)</string>
    <string name="submit">提交</string>
    <string name="feedback">意见反馈</string>
    <string name="hint_publish_diary">记录一下你的美丽故事</string>

    <string name="message_type_comment">评论</string>
    <string name="message_type_diary">日记</string>
    <string name="message_type_topic">话题</string>
    <string name="message_type_event">活动</string>
    <string name="message_type_default">内容</string>

    <string name="update_success_avatar">更新头像成功</string>
    <string name="update_success_username">更新昵称成功</string>
    <string name="update_success_gender">更新性别成功</string>
    <string name="update_success_location">更新地区成功</string>
    <string name="update_success_birthday">更新生日成功</string>
    <string name="update_success_cellphone">更新手机成功</string>
    <string name="msg_phone_exist">该手机已经被注册！</string>
    <string name="msg_phone_not_exist">该手机还没被注册！</string>

    <string name="msg_publish_diary_success">发表日志成功！</string>

    <string name="msg_reply">回复了我的%s</string>
    <string name="txt_word_count">还需要输入%d字</string>
    <string name="msg_content_empty">输入内容不能为空哦</string>
    <string name="msg_feeback_success">你的反馈我们已经收到，谢谢你的支持！</string>
</resources>
