<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray_color"
    android:orientation="vertical">

    <LinearLayout style="@style/layout_item_parent_style">

        <LinearLayout
            android:id="@+id/layout_nickname"
            style="@style/layout_item_style">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="昵称"
                android:textSize="@dimen/normal_text_size" />

            <TextView
                android:id="@+id/txt_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:text="伴美小天使"
                android:textColor="@color/text_normal_color"
                android:textSize="@dimen/normal_text_size" />

        </LinearLayout>

        <View style="@style/divider_offset_gray_style" />

        <LinearLayout
            android:id="@+id/layout_phone"
            style="@style/layout_click_item_style">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/phone"
                android:textSize="@dimen/normal_text_size" />

            <TextView
                android:id="@+id/txt_phone"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:text="18681192051"
                android:textColor="@color/text_normal_color"
                android:textSize="@dimen/normal_text_size" />

            <TextView
                style="@style/text_item_right_arrow_style"
                android:layout_width="wrap_content"
                android:text="@string/change"
                android:textColor="@color/theme_color" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/layout_item_parent_style"
        android:layout_marginTop="@dimen/normal_margin">

        <LinearLayout
            android:id="@+id/layout_project"
            style="@style/layout_click_item_style">

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/project"
                android:textColor="@color/text_normal_color"
                android:textSize="@dimen/normal_text_size" />

            <TextView
                android:id="@+id/txt_project"
                style="@style/text_item_right_arrow_style"
                android:layout_width="wrap_content"
                android:text="@string/hint_please_choose"
                android:textColor="@color/text_light_color" />
        </LinearLayout>

        <View style="@style/divider_offset_gray_style" />

        <LinearLayout
            android:id="@+id/layout_hospital"
            style="@style/layout_click_item_style">

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hospital"
                android:textColor="@color/text_normal_color"
                android:textSize="@dimen/normal_text_size" />

            <TextView
                android:id="@+id/txt_hospital"
                style="@style/text_item_right_arrow_style"
                android:layout_width="wrap_content"
                android:text="@string/hint_please_choose"
                android:textColor="@color/text_light_color" />
        </LinearLayout>

        <View style="@style/divider_offset_gray_style" />

        <LinearLayout
            android:id="@+id/layout_time"
            style="@style/layout_click_item_style">

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/time"
                android:textColor="@color/text_normal_color"
                android:textSize="@dimen/normal_text_size" />

            <TextView
                android:id="@+id/txt_time"
                style="@style/text_item_right_arrow_style"
                android:layout_width="wrap_content"
                android:text="@string/hint_please_choose_optional"
                android:textColor="@color/text_light_color" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="0dip"
        android:layout_height="0dip"
        android:layout_weight="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/shape_bg_company_desc"
        android:padding="10dp"
        android:text="@string/description_angel" />

    <Button
        android:id="@+id/btn_ok"
        style="@style/btn_theme"
        android:layout_margin="@dimen/normal_margin"
        android:onClick="onClick"
        android:text="确认报名" />

</LinearLayout>