<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:layout_marginTop="@dimen/login_margin_top">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_input_phone"
            android:maxLines="1"
            android:paddingLeft="30dip" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/input_phone"
        android:layout_alignLeft="@id/input_phone"
        android:layout_marginBottom="@dimen/normal_margin"
        android:text="+86" />

    <Button
        android:id="@+id/btn_send_verify_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/input_phone"
        android:layout_alignRight="@id/input_phone"
        android:layout_marginBottom="@dimen/normal_margin"
        android:background="@null"
        android:text="@string/send_verify_code" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_phone"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:layout_marginTop="@dimen/normal_margin">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_input_pass"
            android:inputType="textPassword"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_pass"
        android:layout_margin="30dip"
        android:text="@string/verify" />

</RelativeLayout>