<LinearLayout
    android:id="@+id/container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_direct_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:layout_marginTop="15dip"
        android:text="@string/direct_login"/>

    <Button
        android:id="@+id/btn_wechat_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:layout_marginTop="10dip"
        android:text="@string/wechat_login"/>

    <Button
        android:id="@+id/btn_qq_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:layout_marginTop="10dip"
        android:text="@string/qq_login"/>

    <Button
        android:id="@+id/btn_sina_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:layout_marginTop="10dip"
        android:text="@string/sina_login"/>

    <Button
        android:id="@+id/btn_wechat_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:layout_marginTop="10dip"
        android:text="btn_wechat_logout"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/btn_qq_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:layout_marginTop="10dip"
        android:text="btn_qq_logout"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/btn_sina_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:layout_marginTop="10dip"
        android:text="btn_sina_logout"
        android:visibility="invisible"/>

</LinearLayout>