<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray_color">

    <LinearLayout
        android:id="@+id/layout_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="left|top"
            android:hint="@string/hint_feedback"
            android:lineSpacingExtra="5dip"
            android:minHeight="150dip"
            android:padding="@dimen/normal_padding"
            android:textColor="@color/text_normal_color"
            android:textColorHint="@color/text_hint_color"
            android:textSize="@dimen/normal_text_size" />

        <EditText
            android:id="@+id/edit_contact"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:hint="@string/hint_feedback_contact"
            android:padding="@dimen/normal_padding"
            android:textColor="@color/text_normal_color"
            android:textColorHint="@color/text_hint_color"
            android:textSize="@dimen/normal_text_size" />

        <Button
            android:id="@+id/btn_submit"
            style="@style/btn_theme"
            android:layout_marginTop="30dp"
            android:onClick="onClick"
            android:text="@string/submit" />
    </LinearLayout>

</ScrollView>