<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="30dip">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_gray"
            android:padding="10dip"
            android:text="个人信息"
            android:textSize="18dip" />

        <TextView
            android:id="@+id/txt_nickname"
            style="@style/text_mid_item_style"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="10dip"
            android:background="@color/font_gray" />

        <TextView
            android:id="@+id/txt_phone"
            style="@style/text_mid_item_style" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="10dip"
            android:background="@color/font_gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            android:background="@color/bg_gray"
            android:padding="10dip"
            android:text="手术信息"
            android:textSize="18dip" />

        <TextView
            android:id="@+id/txt_hospital"
            style="@style/text_item_right_arrow_style"
            android:text="@string/hospital" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="10dip"
            android:background="@color/font_gray" />

        <TextView
            android:id="@+id/txt_doctor"
            style="@style/text_item_right_arrow_style"
            android:text="@string/doctor" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="10dip"
            android:background="@color/font_gray" />

        <TextView
            android:id="@+id/txt_project"
            style="@style/text_item_right_arrow_style"
            android:text="@string/project" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="10dip"
            android:background="@color/font_gray" />

        <TextView
            android:id="@+id/txt_time"
            style="@style/text_item_right_arrow_style"
            android:text="@string/operation_time" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/font_gray" />

        <Button
            android:id="@+id/btn_ok"
            style="@style/btn_theme"
            android:layout_margin="30dip"
            android:text="确认报名" />

    </LinearLayout>
</ScrollView>